# GafferExamples

./: .gitignore  LICENSE.md  README.md
DeformerExample/: CMakeLists.txt
DeformerExample/include/DeformerExample/: Deformer.h
DeformerExample/python/DeformerExample/: __init__.py
DeformerExample/python/DeformerExampleUI/: DeformerUI.py  __init__.py
DeformerExample/src/DeformerExample/: Deformer.cpp
DeformerExample/src/DeformerExampleModule/: DeformerBinding.cpp
DeformerExample/startup/DeformerExample/: menu.py
present/: gaffer.odp
present/references/: animal.grf  noise.grf  noiseGrid.grf  noisySphere.grf
present/scenes/: example-displacement.gfr  example-image.gfr  example-instancing.gfr  example-lookdev.gfr  example-userdata.gfr  example-volume.gfr
